fix gallery overflow issues

--- a/bhm-site/src/components/gallery/component.css
+++ b/bhm-site/src/components/gallery/component.css
@@ -5,14 +5,16 @@
 }
 
 .gallery-images {
-	height: 85vh !important;
-	object-fit: cover;
+	/* height: 60vh !important; */
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
 }
 
 .gallery-grid {
 	z-index: 2;
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
 	column-gap: 1rem;
 	row-gap: 3rem;
 	margin: auto 1rem;
@@ -74,93 +76,4 @@
 .gallery-grid-item:hover > .gallery-grid-cover {
 	-webkit-filter: grayscale(50%);
 	filter: grayscale(50%);
-}
-
-.carousel-overlay {
-	position: fixed;
-	background-color: rgb(0, 0, 0, 0.95);
-	top: 0;
-	right: 0;
-	left: 0;
-	bottom: 0;
-	z-index: 1000;
-}
-
-.carousel-modal {
-	position: fixed;
-	top: 5%;
-	left: 5%;
-	bottom: 5%;
-	right: 5%;
-	/* transform: translate(-50%, -50%); */
-	background: none;
-	padding: 50px;
-	z-index: 1000;
-	margin: 0;
-}
-
-.carousel-indicators {
-	display: none !important;
-}
-
-.carousel-control-next,
-.carousel-control-prev {
-	cursor: pointer !important;
-	width: 20rem !important;
-	color: rgba(255, 255, 255, 0.95) !important;
-}
-
-.carousel-control-next-icon,
-.carousel-control-prev-icon {
-	color: rgba(255, 255, 255, 0.95) !important;
-}
-
-.carousel-control-next:hover carousel-control-next-icon,
-.carousel-control-prev:hover carousel-control-next-icon {
-	color: rgba(255, 255, 255, 1) !important;
-}
-
-.visually-hidden {
-	visibility: hidden !important;
-}
-
-.carousel-modal-btn {
-	position: fixed;
-	top: 3rem;
-	right: 2rem;
-	background: none;
-	outline: none;
-	border: none;
-	color: white;
-	font-size: 2rem;
-	cursor: pointer;
-}
-
-.carousel-modal-btn:focus {
-	outline: none;
-	border: none;
-}
-
-.play-pause {
-	position: fixed;
-	top: 4rem;
-	right: 5rem;
-	background: none;
-	outline: none;
-	border: none;
-	color: white;
-	font-size: 1.5rem;
-	cursor: pointer;
-}
-
-.fullscreen {
-	position: fixed;
-	top: 4rem;
-	right: 8rem;
-	background: none;
-	outline: none;
-	border: none;
-	color: white;
-	font-size: 1.5rem;
-	cursor: pointer;
 }
